refactor: Tổ chức cây thư mục theo hướng modules
yep, vì lười viết commit desp nên t sẽ nhờ AI viết hộ :v
Bản commit này tổ chức lại các thành phần hiển thị theo một kiến trúc module hơn (giới thiệu các namespace `Work::Core`, `Work::Render` và `Work::Render::Layers`, di chuyển các lớp hiển thị và cập nhật đường dẫn trong các tệp tiêu đề).

Ngoài ra, lớp `TextureMemory` hiện bao gồm một struct `Item` để quản lý kết cấu tốt hơn, và các lớp `Screen` cùng `PlayingScreen` đã được cập nhật để phù hợp với cấu trúc mới.

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -159,7 +159,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\structures\render\collection.cpp" />
+    <ClCompile Include="src\structures\render\layers\objects\collection.cpp">
+        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="src\structures\audio\buses.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
@@ -169,7 +171,7 @@
     <ClCompile Include="src\structures\audio\mixer.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\core.cpp">
+    <ClCompile Include="src\work\core.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\parser\osu\beatmap.cpp">
@@ -199,85 +201,59 @@
     <ClCompile Include="src\main.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\cursor\cursor.cpp">
+    <ClCompile Include="src\structures\render\layers\objects\gameplay\cursor.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\layer.cpp">
+    <ClCompile Include="src\structures\render\layers\layer.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\object.cpp">
+    <ClCompile Include="src\structures\render\layers\objects\object.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\playground\mapset.cpp">
+    <ClCompile Include="src\structures\render\layers\objects\gameplay\mapset.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\texture.cpp">
+    <ClCompile Include="src\structures\render\textures\texture.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\skin.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\screens\screen.cpp" />
+    <ClCompile Include="src\structures\render\screens\gameplay\playing.cpp">
+        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\render\screens\screen.cpp">
+        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="src\work\render.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClInclude Include="include\structures\audio\buses.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\audio\memory.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\audio\mixer.h">
-    </ClInclude>
-    <ClInclude Include="include\config.h">
-    </ClInclude>
-    <ClInclude Include="include\core.h">
-    </ClInclude>
-    <ClInclude Include="include\parser\osu\beatmap.h">
-    </ClInclude>
-    <ClInclude Include="include\parser\tfir\beatmap.h">
-    </ClInclude>
-    <ClInclude Include="include\format\file.h">
-    </ClInclude>
-    <ClInclude Include="include\format\skin.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\game\cursor.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\game\hitobject.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\game\hitsound.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\game\metadata.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\game\timing.h">
-    </ClInclude>
-    <ClInclude Include="include\logger\exceptions.h">
-    </ClInclude>
-    <ClInclude Include="include\logger\info.h">
-    </ClInclude>
-    <ClInclude Include="include\logger\logging.h">
-    </ClInclude>
-    <ClInclude Include="include\main.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\render\cursor\cursor.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\render\layer.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\render\object.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\render\collection.h" />
-    <ClInclude Include="include\structures\render\playground\mapset.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\render\texture.h">
-    </ClInclude>
-    <ClInclude Include="include\skin.h">
-    </ClInclude>
-    <ClInclude Include="include\structures\screens\screen.h" />
-    <ClInclude Include="include\template.h">
-    </ClInclude>
-    <ClInclude Include="include\utilities.h">
-    </ClInclude>
-    <ClInclude Include="include\work\render.h">
-    </ClInclude>
-  </ItemGroup>
+    <ClInclude Include="include\structures\audio\buses.h"/>
+    <ClInclude Include="include\structures\audio\memory.h"/>
+    <ClInclude Include="include\structures\audio\mixer.h"/>
+    <ClInclude Include="include\config.h"/>
+    <ClInclude Include="include\work\core.h"/>
+    <ClInclude Include="include\parser\osu\beatmap.h"/>
+    <ClInclude Include="include\parser\tfir\beatmap.h"/>
+    <ClInclude Include="include\format\file.h"/>
+    <ClInclude Include="include\format\skin.h"/>
+    <ClInclude Include="include\structures\game\cursor.h"/>
+    <ClInclude Include="include\structures\game\hitobject.h"/>
+    <ClInclude Include="include\structures\game\hitsound.h"/>
+    <ClInclude Include="include\structures\game\metadata.h"/>
+    <ClInclude Include="include\structures\game\timing.h"/>
+    <ClInclude Include="include\logger\exceptions.h"/>
+    <ClInclude Include="include\logger\info.h"/>
+    <ClInclude Include="include\logger\logging.h"/>
+    <ClInclude Include="include\main.h"/>
+    <ClInclude Include="include\structures\render\layers\objects\gameplay\cursor.h"/>
+    <ClInclude Include="include\structures\render\layers\layer.h"/>
+    <ClInclude Include="include\structures\render\layers\objects\object.h" />
+    <ClInclude Include="include\structures\render\layers\objects\collection.h" />
+    <ClInclude Include="include\structures\render\layers\objects\gameplay\mapset.h" />
+    <ClInclude Include="include\structures\render\textures\texture.h" />
+    <ClInclude Include="include\skin.h" />
+</ItemGroup>
   <!-- After Build -->
   <ItemGroup>
     <SDL3MixerDLL Include="dependencies\SDL_mixer-build\bin\SDL3_mixer.dll" />
