refactor: Chuyển Screens ra khỏi render

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -159,19 +159,46 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\structures\render\layers\objects\collection.cpp">
-        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
-    </ClCompile>
-    <ClCompile Include="src\structures\audio\buses.cpp">
+    <ClInclude Include="include\config.h" />
+    <ClInclude Include="include\format\file.h" />
+    <ClInclude Include="include\format\skin.h" />
+    <ClInclude Include="include\logger\exceptions.h" />
+    <ClInclude Include="include\logger\info.h" />
+    <ClInclude Include="include\logger\logging.h" />
+    <ClInclude Include="include\main.h" />
+    <ClInclude Include="include\parser\osu\beatmap.h" />
+    <ClInclude Include="include\parser\tfir\beatmap.h" />
+    <ClInclude Include="include\skin.h" />
+    <ClInclude Include="include\structures\audio\buses.h" />
+    <ClInclude Include="include\structures\audio\memory.h" />
+    <ClInclude Include="include\structures\audio\mixer.h" />
+    <ClInclude Include="include\structures\game\cursor.h" />
+    <ClInclude Include="include\structures\game\hitobject.h" />
+    <ClInclude Include="include\structures\game\hitsound.h" />
+    <ClInclude Include="include\structures\game\metadata.h" />
+    <ClInclude Include="include\structures\game\timing.h" />
+    <ClInclude Include="include\structures\render\layers\layer.h" />
+    <ClInclude Include="include\structures\render\layers\objects\collection.h" />
+    <ClInclude Include="include\structures\render\layers\objects\gameplay\cursor.h" />
+    <ClInclude Include="include\structures\render\layers\objects\gameplay\mapset.h" />
+    <ClInclude Include="include\structures\render\layers\objects\object.h" />
+    <ClInclude Include="include\structures\render\textures\texture.h" />
+    <ClInclude Include="include\structures\screens\gameplay\playing.h" />
+    <ClInclude Include="include\structures\screens\screen.h" />
+    <ClInclude Include="include\template.h" />
+    <ClInclude Include="include\utilities.h" />
+    <ClInclude Include="include\work\core.h" />
+    <ClInclude Include="include\work\render.h" />
+    <ClInclude Include="include\work\render\layers.h" />
+    <ClInclude Include="include\work\screens.h" />
+    <ClInclude Include="include\work\render\textures.h" />
+    <ClCompile Include="src\format\skin.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\audio\memory.cpp">
+    <ClCompile Include="src\logger\logging.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\audio\mixer.cpp">
-      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
-    </ClCompile>
-    <ClCompile Include="src\work\core.cpp">
+    <ClCompile Include="src\main.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\parser\osu\beatmap.cpp">
@@ -180,7 +207,16 @@
     <ClCompile Include="src\parser\tfir\beatmap.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\format\skin.cpp">
+    <ClCompile Include="src\skin.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\audio\buses.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\audio\memory.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\audio\mixer.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\structures\game\hitobject.cpp">
@@ -195,65 +231,37 @@
     <ClCompile Include="src\structures\game\timing.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\logger\logging.cpp">
+    <ClCompile Include="src\structures\render\layers\layer.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\main.cpp">
+    <ClCompile Include="src\structures\render\layers\objects\collection.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\structures\render\layers\objects\gameplay\cursor.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\layers\layer.cpp">
+    <ClCompile Include="src\structures\render\layers\objects\gameplay\mapset.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\structures\render\layers\objects\object.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\layers\objects\gameplay\mapset.cpp">
+    <ClCompile Include="src\structures\render\screens\gameplay\playing.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\render\screens\screen.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\structures\render\textures\texture.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\skin.cpp">
+    <ClCompile Include="src\work\core.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
-    </ClCompile>
-    <ClCompile Include="src\structures\render\screens\gameplay\playing.cpp">
-        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
-    </ClCompile>
-    <ClCompile Include="src\structures\render\screens\screen.cpp">
-        <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\work\render.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClInclude Include="include\structures\audio\buses.h"/>
-    <ClInclude Include="include\structures\audio\memory.h"/>
-    <ClInclude Include="include\structures\audio\mixer.h"/>
-    <ClInclude Include="include\config.h"/>
-    <ClInclude Include="include\work\core.h"/>
-    <ClInclude Include="include\parser\osu\beatmap.h"/>
-    <ClInclude Include="include\parser\tfir\beatmap.h"/>
-    <ClInclude Include="include\format\file.h"/>
-    <ClInclude Include="include\format\skin.h"/>
-    <ClInclude Include="include\structures\game\cursor.h"/>
-    <ClInclude Include="include\structures\game\hitobject.h"/>
-    <ClInclude Include="include\structures\game\hitsound.h"/>
-    <ClInclude Include="include\structures\game\metadata.h"/>
-    <ClInclude Include="include\structures\game\timing.h"/>
-    <ClInclude Include="include\logger\exceptions.h"/>
-    <ClInclude Include="include\logger\info.h"/>
-    <ClInclude Include="include\logger\logging.h"/>
-    <ClInclude Include="include\main.h"/>
-    <ClInclude Include="include\structures\render\layers\objects\gameplay\cursor.h"/>
-    <ClInclude Include="include\structures\render\layers\layer.h"/>
-    <ClInclude Include="include\structures\render\layers\objects\object.h" />
-    <ClInclude Include="include\structures\render\layers\objects\collection.h" />
-    <ClInclude Include="include\structures\render\layers\objects\gameplay\mapset.h" />
-    <ClInclude Include="include\structures\render\textures\texture.h" />
-    <ClInclude Include="include\skin.h" />
-</ItemGroup>
+  </ItemGroup>
   <!-- After Build -->
   <ItemGroup>
     <SDL3MixerDLL Include="dependencies\SDL_mixer-build\bin\SDL3_mixer.dll" />
